--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 
 #app {
   height: 100vh;
+  position: relative;
 
   display: flex;
   justify-content: center;
@@ -150,6 +151,107 @@ body {
 .app__container-clock__info-clock__alarm--title,
 .app__container-clock__info-clock__date--title {
   font-size: calc(3.5rem + 0.66667vw);
+}
+
+/******************************************************** ALARM STYLED ********************************************************/
+.overlay {
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background: rgba(0, 0, 0, 0.45);
+  z-index: 1;
+}
+
+.app__model-alarm {
+  width: 50vmax;
+  height: 30rem;
+  padding: calc(1.5rem + 0.5vw);
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  text-align: center;
+
+  transform: translate(-50%, -50%);
+
+  background: var(--primary-color);
+  border-radius: 1.5rem;
+
+  z-index: 2;
+}
+
+.app__model-alarm h2 {
+  text-align: center;
+  font-size: calc(2.7rem + 1vw);
+}
+
+form {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+form p {
+  font-size: calc(1.6rem + 0.2vw);
+}
+
+form input {
+  width: 4rem;
+  padding: 0.1rem;
+
+  text-align: center;
+  color: var(--quaternary-color);
+  font-size: calc(1.9rem + 0.2vw);
+
+  border: 0.2rem solid var(--quaternary-color);
+}
+
+.bnt-set {
+  width: 12.5rem;
+  height: 4.9rem;
+  margin: calc(2.8rem + 2vh) 0;
+
+  font-size: 2.5rem;
+  color: var(--primary-color);
+
+  background: var(--quaternary-color);
+  border: 0;
+  border-radius: 0.5rem;
+
+  cursor: pointer;
+
+  transition: 0.45s ease-in-out;
+}
+
+.bnt-set:hover {
+  color: var(--quaternary-color);
+
+  background: var(--tertiary-color);
+}
+
+.btn-close-model {
+  width: 3.1rem;
+  height: 3.1rem;
+
+  position: absolute;
+  top: 5px;
+  right: 5px;
+
+  font-size: 2.8rem;
+  font-weight: bold;
+
+  border: 0;
+  background: none;
+
+  cursor: pointer;
+}
+
+.hidden {
+  transform: scale(0);
 }
 
 /******************************************************** (MIN-WIDTH: 1510px) ********************************************************/
