--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ form input {
   border: 0.2rem solid var(--quaternary-color);
 }
 
-.bnt-set {
+.btn-set {
   width: 12.5rem;
   height: 4.9rem;
   margin: calc(2.8rem + 2vh) 0;
@@ -227,7 +227,7 @@ form input {
   transition: 0.45s ease-in-out;
 }
 
-.bnt-set:hover {
+.btn-set:hover {
   color: var(--quaternary-color);
 
   background: var(--tertiary-color);
