--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
   font-size: calc(2.5rem + 0.66667vw);
 }
 
-.btn-set-alarm {
+.btn {
   width: calc(9.5rem + 2vw);
   height: 3.5rem;
 
@@ -144,7 +144,7 @@ body {
   cursor: pointer;
 }
 
-.btn-set-alarm:hover {
+.btn:hover {
   background: var(--secondary-color);
 }
 
@@ -210,10 +210,15 @@ form input {
   border: 0.2rem solid var(--quaternary-color);
 }
 
+.app__model-alarm--warning {
+  color: #fc1b1b;
+  font-size: calc(1.9rem + 0.2vw);
+}
+
 .btn-set {
   width: 12.5rem;
   height: 4.9rem;
-  margin: calc(2.8rem + 2vh) 0;
+  margin: calc(1.6rem + 1vh) 0;
 
   font-size: 2.5rem;
   color: var(--primary-color);
@@ -251,6 +256,8 @@ form input {
 }
 
 .hidden {
+  width: 0;
+  height: 0;
   transform: scale(0);
 }
 
