--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************************************** RESET ********************************************************/
 *,
-::after,
-::before {
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
